sync/sdk-kit/turso_sync.h

// sync engine IO atomic read request
typedef struct
{
    // file path
    turso_slice_ref_t path;
} turso_sync_io_full_read_request_t;
// sync engine IO atomic write request
typedef struct
{
    // file path
    turso_slice_ref_t path;
    // file content
    turso_slice_ref_t content;
} turso_sync_io_full_write_request_t;
/// opaque pointer to the TursoDatabaseSyncChanges instance
/// SAFETY: turso_sync_changes_t have independent lifetime and must be explicitly deallocated with turso_sync_changes_deinit method OR passed to the turso_sync_database_apply_changes method which gather ownership to this object
typedef struct turso_sync_changes turso_sync_changes_t;
/// opaque pointer to the TursoDatabaseSync instance
/// SAFETY: at most one sync operation (connect, stats, checkpoint, push_changes, wait_changes, apply_changes)
/// may be in progress on a database at a time; one started while another is running fails at its first resume
typedef struct turso_sync_database turso_sync_database_t;
/// opaque pointer to the TursoAsyncOperation instance
/// SAFETY: methods for the turso_sync_operation_t can't be called concurrently
typedef struct turso_sync_operation turso_sync_operation_t;
/// opaque pointer to the SyncEngineIoQueueItem instance
typedef struct turso_sync_io_item turso_sync_io_item_t;
/** Get HTTP request fields */
turso_status_code_t
turso_sync_database_io_request_full_read(const turso_sync_io_item_t *self, turso_sync_io_full_read_request_t *request);
/** Get HTTP request fields */
turso_status_code_t
turso_sync_database_io_request_full_write(const turso_sync_io_item_t *self, turso_sync_io_full_write_request_t *request);
/** Poison IO request completion with error */
turso_status_code_t turso_sync_database_io_poison(const turso_sync_io_item_t *self, turso_slice_ref_t *error);
/** Set IO request completion status */
turso_status_code_t turso_sync_database_io_status(const turso_sync_io_item_t *self, int32_t status);
/** Push bytes to the IO completion buffer */
turso_status_code_t turso_sync_database_io_push_buffer(const turso_sync_io_item_t *self, turso_slice_ref_t *buffer);
/** Set IO request completion as done */
turso_status_code_t turso_sync_database_io_done(const turso_sync_io_item_t *self);
/** Deallocate a TursoDatabaseSync */
void turso_sync_database_deinit(const turso_sync_database_t *self);
/** Deallocate a TursoAsyncOperation */
void turso_sync_operation_deinit(const turso_sync_operation_t *self);
/** Deallocate a SyncEngineIoQueueItem */
void turso_sync_database_io_item_deinit(const turso_sync_io_item_t *self);
/** Deallocate a TursoDatabaseSyncChanges */
void turso_sync_changes_deinit(const turso_sync_changes_t *self);