sync/sdk-kit/src/bindings.rs

unsafe extern "C" {
    #[doc = " Get HTTP request fields"]
    pub fn turso_sync_database_io_request_full_read(
        self_: *const turso_sync_io_item_t,
        request: *mut turso_sync_io_full_read_request_t,
    ) -> turso_status_code_t;
}
unsafe extern "C" {
    #[doc = " Get HTTP request fields"]
    pub fn turso_sync_database_io_request_full_write(
        self_: *const turso_sync_io_item_t,
        request: *mut turso_sync_io_full_write_request_t,
    ) -> turso_status_code_t;
}
unsafe extern "C" {
    #[doc = " Poison IO request completion with error"]
    pub fn turso_sync_database_io_poison(
        self_: *const turso_sync_io_item_t,
        error: *mut turso_slice_ref_t,
    ) -> turso_status_code_t;
}
unsafe extern "C" {
    #[doc = " Set IO request completion status"]
    pub fn turso_sync_database_io_status(
        self_: *const turso_sync_io_item_t,
        status: i32,
    ) -> turso_status_code_t;
}
unsafe extern "C" {
    #[doc = " Push bytes to the IO completion buffer"]
    pub fn turso_sync_database_io_push_buffer(
        self_: *const turso_sync_io_item_t,
        buffer: *mut turso_slice_ref_t,
    ) -> turso_status_code_t;
}
unsafe extern "C" {
    #[doc = " Set IO request completion as done"]
    pub fn turso_sync_database_io_done(self_: *const turso_sync_io_item_t) -> turso_status_code_t;
}
unsafe extern "C" {
    #[doc = " Deallocate a TursoDatabaseSync"]
    pub fn turso_sync_database_deinit(self_: *const turso_sync_database_t);
}
unsafe extern "C" {
    #[doc = " Deallocate a TursoAsyncOperation"]
    pub fn turso_sync_operation_deinit(self_: *const turso_sync_operation_t);
}
unsafe extern "C" {
    #[doc = " Deallocate a SyncEngineIoQueueItem"]
    pub fn turso_sync_database_io_item_deinit(self_: *const turso_sync_io_item_t);
}
unsafe extern "C" {
    #[doc = " Deallocate a TursoDatabaseSyncChanges"]
    pub fn turso_sync_changes_deinit(self_: *const turso_sync_changes_t);
}
